@@ -3,6 +3,7 @@ Version 0.2.6 (2022-03-03)
 - add more quotes
 - `search_quotes` uses `message()` not `stop()` on empty search
 - add `search_text()` shortcut
+- `search_quotes()` gets `ignore_case=TRUE`
 
 Version 0.2.5 (2019-10-11)
 
